add_executable(binary_search 1_binary_search.cpp)
target_link_libraries(binary_search GTest::gtest_main)

add_executable(remove_element 2_remove_element.cpp)
target_link_libraries(remove_element GTest::gtest_main)

add_executable(squares_of_a_sorted_array 3_squares_of_a_sorted_array.cpp)
target_link_libraries(squares_of_a_sorted_array GTest::gtest_main)

add_executable(minimum_size_subarray_sum 4_minimum_size_subarray_sum.cpp)
target_link_libraries(minimum_size_subarray_sum GTest::gtest_main)

add_executable(spiral_matrix 5_spiral_matrix.cpp)
target_link_libraries(spiral_matrix GTest::gtest_main)